--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,8 +3,12 @@ name: Rust
 
 on:
   push:
+    paths-ignore:
+      - '**/*.md'    
     branches: ["main"]
   pull_request:
+    paths-ignore:
+      - '**/*.md'
     branches: ["main"]
 
 env:
