--- a/crates/reqwest_post/Cargo.toml
+++ b/crates/reqwest_post/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-reqwest = "0.12.15"
+reqwest = { version = "0.12.15", features = ["json"] }
 pretty-printer = "0.1.1"
 tokio = { version = "1.45.0", features = ["full"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
