--- a/crates/my_redis/Cargo.toml
+++ b/crates/my_redis/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 tokio = { version = "1.45.0", features = ["full"] }
 mini-redis = "0.4"
+bytes = "1.10.1"
+pretty-printer = "0.1.1"
